feat(restaurants): ✨ configura o modo e a taxa de entrega
